# CpptraceTest

./: .gitignore  CMakeLists.txt  README.md
ConsoleApp/: CMakeLists.txt
ConsoleApp/src/: main.cpp
StackTraceLib/include/StackTrace/: StackTraceLib.h
WindowApp/: CMakeLists.txt
WindowApp/src/: MainWindow.cpp  MainWindow.h  main.cpp
src/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp
src/ConsoleApp/: CMakeLists.txt
src/ConsoleApp/src/: main.cpp
src/StackTraceLib/: CMakeLists.txt
src/StackTraceLib/include/StackTrace/: StackTrace.h  StackTraceLib.h
src/StackTraceLib/src/: StackTrace.cpp
src/WindowApp/: CMakeLists.txt
src/WindowApp/src/: BreakingWindow.cpp  BreakingWindow.h  BreakingWindow.ui  main.cpp
